--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>728</width>
-    <height>140</height>
+    <width>695</width>
+    <height>267</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,17 +15,107 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
-     <widget class="QComboBox" name="comboBoxSiteList"/>
-    </item>
-    <item row="0" column="4">
-     <widget class="QPushButton" name="pushButtonFindID">
+    <item row="0" column="3">
+     <widget class="QLabel" name="label_2">
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <property name="text">
-       <string>아이디 기록</string>
+       <string>아이디</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="3" colspan="2">
+    <item row="4" column="1" colspan="2">
+     <widget class="QFrame" name="frame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QCheckBox" name="checkBoxIsSpecial">
+         <property name="text">
+          <string>특수문자 포함</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxIsUpperOnly">
+         <property name="text">
+          <string>소문자 제외</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxIsLowerOnly">
+         <property name="text">
+          <string>대문자 제외</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxIsNum">
+         <property name="text">
+          <string>숫자 포함</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxIsExcludeSimilar">
+         <property name="text">
+          <string>비슷한 문자 제외(i, I, l, L, 1, o, O, 0)</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="2" column="3">
+     <widget class="QLabel" name="label">
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>비밀번호</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1" colspan="2">
+     <widget class="QPushButton" name="pushButtonMakePW">
+      <property name="text">
+       <string>생성</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="2">
+     <widget class="QComboBox" name="comboBoxSiteList"/>
+    </item>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pushButtonDeleteSite">
+      <property name="text">
+       <string>사이트 삭제</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QPushButton" name="pushButtonAddSite">
+      <property name="text">
+       <string>사이트 추가</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="4" colspan="3">
      <widget class="QLineEdit" name="lineEditPW">
       <property name="text">
        <string/>
@@ -41,35 +131,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QPushButton" name="pushButtonDeleteSite">
-      <property name="text">
-       <string>사이트 삭제</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="pushButtonAddSite">
-      <property name="text">
-       <string>사이트 추가</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="2">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>비밀번호</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0" colspan="5">
-     <widget class="QPushButton" name="pushButtonMakePW">
-      <property name="text">
-       <string>생성</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3">
+    <item row="0" column="4" colspan="3">
      <widget class="QLineEdit" name="lineEditID">
       <property name="dragEnabled">
        <bool>true</bool>
@@ -79,13 +141,34 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="label_2">
-      <property name="layoutDirection">
-       <enum>Qt::LeftToRight</enum>
-      </property>
+    <item row="5" column="3" colspan="2">
+     <widget class="QPushButton" name="pushButtonSavePW">
       <property name="text">
-       <string>아이디</string>
+       <string>저장</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="5" colspan="2">
+     <widget class="QPushButton" name="pushButtonFindID">
+      <property name="text">
+       <string>데이터 베이스</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="6">
+     <widget class="QSpinBox" name="spinBox">
+      <property name="maximum">
+       <number>50</number>
+      </property>
+      <property name="value">
+       <number>20</number>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="5">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>글자 수 (최대 50)</string>
       </property>
      </widget>
     </item>
@@ -96,7 +179,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>728</width>
+     <width>695</width>
      <height>21</height>
     </rect>
    </property>
