--- a/ui/OTPScanWindow.ui
+++ b/ui/OTPScanWindow.ui
@@ -1,46 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DialogInputKeyWindow</class>
- <widget class="QDialog" name="DialogInputKeyWindow">
+ <class>OTPScanWindow</class>
+ <widget class="QDialog" name="OTPScanWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>303</width>
-    <height>129</height>
+    <width>235</width>
+    <height>287</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Input Key</string>
+   <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>OTP를 입력하세요.</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Ok</set>
-     </property>
-     <property name="centerButtons">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_2">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>30</height>
+      </size>
+     </property>
      <property name="text">
-      <string>복호화 키를 입력하세요.</string>
+      <string>OTP 앱에서 스캔하십시오</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -48,16 +31,22 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QLineEdit" name="lineEditKey">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
+    <widget class="QLabel" name="labelQR">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QLineEdit" name="lineEditOTP">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
+   <item row="2" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close</set>
+     </property>
+     <property name="centerButtons">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -68,7 +57,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>DialogInputKeyWindow</receiver>
+   <receiver>OTPScanWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -84,7 +73,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>DialogInputKeyWindow</receiver>
+   <receiver>OTPScanWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
